--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
             </ul>
             <div class="flex justify-end gap-6">
-                <a href="" class="bg-green-300 px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-green-600 duration-500">
+                <a href="user/login.html" class="bg-green-300 px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-green-600 duration-500">
                     <p>Login</p>
                 </a>
                 <a href="" class="bg-white px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-gray-300 duration-500">
