--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <!-- Favicon -->
 <link rel="icon" href="img/food-package.png" type="image/x-icon">
@@ -18,7 +19,7 @@
                 <img class="rounded-[50%]" src="img/gobiz.png" alt="GoBiz Logo">
             </div>
             <ul class="flex col-span-2 justify-center gap-32 items-center">
-                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">About</a></li>
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="about.html">About</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Contact</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">BizTips</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
@@ -43,8 +44,16 @@
             <p class="font-['Roboto_Condensed'] text-xl">PT. GoBiz By Abn didirikan pada tahun 2020 untuk membantu UMKM di Indonesia dalam mengelola bisnis secara digital. Aplikasi GoBiz menyediakan berbagai fitur, mulai dari manajemen pesanan hingga pembayaran digital, yang dirancang untuk mempermudah pengusaha dalam menjalankan usaha mereka. Dalam waktu singkat, GoBiz telah menjadi salah satu solusi terdepan bagi bisnis lokal di Indonesia.</p>
         </div>
         <div class="flex justify-center">
-            <p class="font-['DM_Serif_Display'] text-blue-900 font-medium text-7xl">PT.GoBiz By Abn</p>
+            <p class="font-['DM_Serif_Display'] text-blue-900 font-medium text-7xl">PT GoBiz By Abn</p>
         </div>
     </section>
+
+    
+    <footer>
+        <div class="footer-content">
+            <p>© 2024 GoBizID, PT GoBiz By Abn</p>
+            <p> instagram: <a href="https://instagram.com/abnxrmally">Abnormal</a></p>
+        </div>
+    </footer>
 </body>
 </html>
