--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <header class="bg-white sticky top-0">
         <nav class="grid grid-cols-4 flex items-center px-10 py-2">
             <div class="w-16">
-                <img class="rounded-[50%]" src="img/gobiz.png" alt="GoBiz Logo">
+                <img class="rounded-[50%]" src="img/gobiz.png" alt="GoBiz Logo" >
             </div>
             <ul class="flex col-span-2 justify-center gap-32 items-center">
-                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">About</a></li>
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="about.html">About</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="contact.html">Contact</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">BizTips</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
