Fix broken links and add back-to-home button

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <!-- Favicon -->
-<link rel="icon" href="img/food-package.png" type="image/x-icon">
+ <a href="index.html">
+<link rel="icon" href="img/food-package.png" type="image/x-icon"></a>
 
 <body class="bg-gray-300">
     <header class="bg-white sticky top-0">
@@ -26,7 +27,7 @@
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
             </ul>
             <div class="flex justify-end gap-6">
-                <a href="" class="bg-green-300 px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-green-600 duration-500">
+                <a href="user/login.html" class="bg-green-300 px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-green-600 duration-500">
                     <p>Login</p>
                 </a>
                 <a href="user/register.html" class="bg-white px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-gray-300 duration-500">
