--- a/user/login.html
+++ b/user/login.html
@@ -43,6 +43,11 @@
                 <button type="submit" class="w-full bg-black hover:bg-opacity-70 text-white py-2 rounded-lg font-semibold">LOGIN</button>
             </div>
         </form>
+
+        <!-- Back to Home Button -->
+        <div class="mt-6">
+            <a href="index.html" class="w-full bg-black hover:bg-opacity-70 text-white py-2 rounded-lg text-center block font-semibold">Back to Home</a>
+        </div>
     </div>
 
 </body>
