Refactor login page styling and content

--- a/user/login.html
+++ b/user/login.html
@@ -3,52 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Login</title>
+    <title>Login Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-teal-400 h-screen flex items-center justify-center">
-
-    <div class="bg-teal-700 bg-opacity-30 p-8 rounded-lg shadow-lg w-96">
-        <!-- User Login Title -->
-        <div class="text-center mb-6">
-            <img src="http://127.0.0.1:5500/img/gobiz.png" alt="User Icon" class="mx-auto w-16 h-16">
-            <h2 class="text-2xl font-semibold text-white">USER LOGIN</h2>
-        </div>
-
-        <!-- Login Form -->
-        <form action="#" class="space-y-4">
-            <!-- Email Input -->
-            <div>
-                <label for="email" class="block text-white mb-1">Email ID</label>
-                <input type="email" id="email" class="w-full px-4 py-2 rounded-lg border border-gray-300 bg-transparent text-white placeholder-gray-400 focus:outline-none focus:border-white">
+<body class="bg-gradient-to-b from-purple-600 to-indigo-900 h-screen flex items-center justify-center">
+    <div class="bg-white bg-opacity-10 backdrop-blur-sm rounded-lg shadow-lg p-10 w-full max-w-md">
+        <h2 class="text-white text-2xl font-bold text-center mb-6">Login</h2>
+        <form action="#">
+            <div class="mb-4">
+                <label for="username" class="text-white block text-sm mb-2">Username</label>
+                <input type="text" id="username" class="w-full px-4 py-2 rounded-lg bg-white bg-opacity-20 text-white focus:outline-none focus:ring-2 focus:ring-purple-400" placeholder="Enter your username">
             </div>
-
-            <!-- Password Input -->
-            <div>
-                <label for="password" class="block text-white mb-1">Password</label>
-                <input type="password" id="password" class="w-full px-4 py-2 rounded-lg border border-gray-300 bg-transparent text-white placeholder-gray-400 focus:outline-none focus:border-white">
+            <div class="mb-4">
+                <label for="password" class="text-white block text-sm mb-2">Password</label>
+                <input type="password" id="password" class="w-full px-4 py-2 rounded-lg bg-white bg-opacity-20 text-white focus:outline-none focus:ring-2 focus:ring-purple-400" placeholder="Enter your password">
             </div>
-
-            <!-- Remember Me & Forgot Password -->
-            <div class="flex justify-between items-center text-sm text-gray-300">
-                <div>
-                    <input type="checkbox" id="remember" class="mr-2">
-                    <label for="remember">Remember Me</label>
-                </div>
-                <a href="#" class="hover:text-white">Forgot Password?</a>
+            <div class="flex items-center justify-between mb-4">
+                <label class="flex items-center text-white">
+                    <input type="checkbox" class="form-checkbox h-4 w-4 text-purple-400"> 
+                    <span class="ml-2">Remember me</span>
+                </label>
+                <a href="#" class="text-purple-300 text-sm hover:text-purple-400">Forgot password?</a>
             </div>
-
-            <!-- Login Button -->
-            <div>
-                <button type="submit" class="w-full bg-black hover:bg-opacity-70 text-white py-2 rounded-lg font-semibold">LOGIN</button>
-            </div>
+            <button type="submit" class="w-full bg-purple-500 text-white py-2 rounded-lg hover:bg-purple-600 transition">Login</button>
         </form>
-
-        <!-- Back to Home Button -->
-        <div class="mt-6">
-            <a href="index.html" class="w-full bg-black hover:bg-opacity-70 text-white py-2 rounded-lg text-center block font-semibold">Back to Home</a>
-        </div>
+        <p class="text-center text-white text-sm mt-4">
+            Don't have an account? 
+            <a href="register.html" class="text-purple-300 hover:text-purple-400">Register</a>
+        </p>
     </div>
-
 </body>
 </html>
