Refactor login page styling and content

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
             </ul>
             <div class="flex justify-end gap-6">
-                <a href="" class="bg-green-300 px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-green-600 duration-500">
+                <a href="user/login.html" class="bg-green-300 px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-green-600 duration-500">
                     <p>Login</p>
                 </a>
                 <a href="user/register.html" class="bg-white px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-gray-300 duration-500">
@@ -52,9 +52,16 @@
 
     
     <footer>
-        <div class="footer-content">
+        <div class="footer-content" >
             <p>© 2024 GoBizID, PT GoBiz By Abn</p>
-            <p> instagram: <a href="https://instagram.com/abnxrmally">Abnormal</a></p>
+            <div style="margin-top: 20px;">
+                <p>Ikuti Kami:</p>
+                <div style="display: flex; justify-content: center; gap: 20px;">
+                    <a href="https://www.instagram.com/abnxrmally" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 30px; height: 30px;">
+                    </a>
+                </div>
+            </div> 
         </div>
     </footer>
 </body>
