menambahkan map pada bagian contact

--- a/contact.html
+++ b/contact.html
@@ -44,5 +44,13 @@
     <p class="font-['Roboto_Condensed'] text-xl px-32 pt-2">Email: gobizgoo@gobiz.co.id gobizmarket@gobiz.co.id</p>
     <p class="font-['Roboto_Condensed'] text-xl px-32 pt-2">Website: gobizid.com</p>
     <p class="font-['Roboto_Condensed'] text-xl px-32 pt-2">Map:</p>
+<div class="flex flex-col space-y-2 sm:flex-row sm:justify-center sm:space-y-1">
+    <div class="row px-32 pt-5"> <!-- Tambahkan padding untuk align map dengan konten -->
+        <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.2134984863222!2d107.57351127631264!3d-6.874318847290697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7d1b68bb875%3A0xd8fcf5a9e43bd6e4!2sJl.%20Sariasih%20No.54%2C%20Sarijadi%2C%20Kec.%20Sukasari%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040151!5e0!3m2!1sid!2sid!4v1703008403145!5m2!1sid!2sid"
+            width="900" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>           
+    </div>
+</div>
 </body>
 </html>
