--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <title>Contact Gobiz</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <!-- Favicon -->
@@ -50,9 +49,19 @@
         </div>
     </section>
 
+    <section class="grid grid-cols-2 px-32 pt-8 items-center">
+        <div class="flex justify-center">
+            <p class="font-['DM_Serif_Display'] text-blue-900 font-medium text-7xl">Our Vision & Mission</p>
+        </div>
+        <div class="flex flex-col justify-start space-y-4"> 
+            <p class="font-['Roboto_Condensed'] text-xl">1. Memberdayakan dan Mendukung UMKM: Meningkatkan pertumbuhan dan keberlanjutan UMKM melalui solusi digital yang inovatif dan akses ke pelatihan.</p>
+            <p class="font-['Roboto_Condensed'] text-xl">2. Meningkatkan Akses Pasar: Membantu UMKM memperluas jangkauan pelanggan melalui pemasaran digital dan teknologi modern.</p>
+            <p class="font-['Roboto_Condensed'] text-xl">3. Membangun Ekosistem Bisnis yang Kuat: Menciptakan komunitas yang saling mendukung antara UMKM dan pemangku kepentingan untuk kolaborasi dan pertumbuhan bersama.</p>
+        </div>
+    </section>
     
     <footer>
-        <div class="footer-content" >
+        <div class="footer-content">
             <p>© 2024 GoBizID, PT GoBiz By Abn</p>
             <div style="margin-top: 20px;">
                 <p>Ikuti Kami:</p>
