menambahkan hover pada index

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="bg-white sticky top-0">
@@ -65,18 +66,23 @@
 
     <section class="services">
         <div class="service">
+            <i class="fas fa-tags"></i> <!-- Tambahkan icon -->
             <h2>Bikin Promo dan Pesanan di <span>GoBiz</span></h2>
         </div>
         <div class="service">
+            <i class="fas fa-credit-card"></i> <!-- Icon lainnya -->
             <h2>Terima Pembayaran Digital Pakai <span>GoBiz</span></h2>
         </div>
         <div class="service">
+            <i class="fas fa-briefcase"></i> <!-- Icon lainnya -->
             <h2>Tambah Modal Usaha di <span>GoBiz</span></h2>
         </div>
         <div class="service">
+            <i class="fas fa-receipt"></i> <!-- Icon lainnya -->
             <h2>Catat Transaksi Secara Digital di <span>GoBiz</span></h2>
         </div>
     </section>
+    
 
     <section class="partners">
         <h2>Mitra-mitra yang Telah Percaya GoBiz</h2>
@@ -87,20 +93,27 @@
         </div>
     </section>
 
-    <section class="registration">
-        <h2>Pendaftaran GoBiz</h2>
-        <div class="steps">
-            <div class="step">
-                <h3>Buka Aplikasi GoBiz</h3>
-            </div>
-            <div class="step">
-                <h3>Registrasi</h3>
-            </div>
-            <div class="step">
-                <h3>Aktivasi</h3>
-            </div>
+   <section class="registration">
+    <h2>Pendaftaran <span>GoBiz</span></h2>
+    <div class="steps">
+        <div class="step">
+            <div class="step-number">1</div> <!-- Tambahkan angka atau icon -->
+            <h3>Buka Aplikasi GoBiz</h3>
+            <p>Buka aplikasi GoBiz untuk memulai.</p>
         </div>
-    </section>
+        <div class="step">
+            <div class="step-number">2</div>
+            <h3>Registrasi</h3>
+            <p>Masukkan informasi bisnis dan buat akun Anda.</p>
+        </div>
+        <div class="step">
+            <div class="step-number">3</div>
+            <h3>Aktivasi</h3>
+            <p>Aktifkan akun Anda dan mulai gunakan GoBiz.</p>
+        </div>
+    </div>
+</section>
+
 
     <section class="testimonials">
         <h2>Cerita mereka yang sudah memilih GoBiz</h2>
