Fix broken link in user index.html

--- a/user/index.html
+++ b/user/index.html
@@ -23,7 +23,7 @@
                 <p>GoBiz</p>
             </div>
             <ul class="flex justify-center gap-12 col-span-2">
-                <li><a href="#">Layanan</a></li>
+                <li><a href="##">Layanan</a></li>
                 <li><a href="#">Tentang</a></li>
                 <li><a href="#">BizTips</a></li>
                 <li><a href="#">Komunitas</a></li>
