membenarkan link map dan penambahan pada index

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         <div class="step">
             <div class="step-number">3</div>
             <h3>Aktivasi</h3>
+            <P>Aktifkan akun Anda dan mulai gunakan GoBiz.</P>
             </div>
     </div>
 </section>
