--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 
     <section class="services">
         <div class="service">
-            <i class="fas fa-tags"></i> <!-- Tambahkan icon -->
+            <i class="fas fa-tags"></i> 
             <h2>Bikin Promo dan Pesanan di <span>GoBiz</span></h2>
         </div>
         <div class="service">
-            <i class="fas fa-credit-card"></i> <!-- Icon lainnya -->
+            <i class="fas fa-credit-card"></i> 
             <h2>Terima Pembayaran Digital Pakai <span>GoBiz</span></h2>
         </div>
         <div class="service">
-            <i class="fas fa-briefcase"></i> <!-- Icon lainnya -->
+            <i class="fas fa-briefcase"></i>
             <h2>Tambah Modal Usaha di <span>GoBiz</span></h2>
         </div>
         <div class="service">
-            <i class="fas fa-receipt"></i> <!-- Icon lainnya -->
+            <i class="fas fa-receipt"></i> 
             <h2>Catat Transaksi Secara Digital di <span>GoBiz</span></h2>
         </div>
     </section>
@@ -88,7 +88,6 @@
         <div class="partner-logos">
             <img src=https://3dmdb.com/previews/13037200.jpg alt="Partner 1">
             <img src=https://www.rajaloker.id/storage/company_logo/111620201415505fb2272678fcd.png alt="Partner 2">
-            <!-- Add more logos as needed -->
         </div>
     </section>
 
@@ -96,7 +95,7 @@
         <h2>Pendaftaran GoBiz</h2>
     <div class="steps">
         <div class="step">
-            <div class="step-number">1</div> <!-- Tambahkan angka atau icon -->
+            <div class="step-number">1</div> 
             <h3>Buka Aplikasi GoBiz</h3>
             <p>Buka aplikasi GoBiz untuk memulai.</p>
         </div>
@@ -111,20 +110,19 @@
             <P>Aktifkan akun Anda dan mulai gunakan GoBiz.</P>
             </div>
     </div>
-</section>
-
-
-    <section class="testimonials">
-        <h2>Cerita mereka yang sudah memilih GoBiz</h2>
-        <div class="testimonial">
-            <p>"Fitur dalam aplikasi GoBiz sangat mempermudah dalam mengelola usaha kuliner."</p>
-            <p>Nedi Sopian, Pemilik pasakanambu</p>
-        </div>
-    </section>
+   </section>      
 
     <footer>
         <div class="footer-content">
-            <p>© 2024 GoBizID, PT Informatika Digital Bisnis</p>
+            <p>© 2024 GoBizID, PT GoBiz By Abn</p>
+            <div style="margin-top: 5px;">
+                <p>Ikuti Kami:</p>
+                <div style="display: flex; justify-content: center; gap: 20px;">
+                    <a href="https://www.instagram.com/abnxrmally" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 30px; height: 30px;">
+                    </a>
+                </div>
+            </div> 
         </div>
     </footer>
     
