--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <!-- Favicon -->
- <a href="index.html">
+<a href="index.html">
 <link rel="icon" href="img/food-package.png" type="image/x-icon"></a>
 
 <body class="bg-gray-300">
@@ -44,7 +44,9 @@
     <p class="font-['Roboto_Condensed'] text-xl px-32 pt-2">Email: gobizgoo@gobiz.co.id gobizmarket@gobiz.co.id</p>
     <p class="font-['Roboto_Condensed'] text-xl px-32 pt-2">Website: gobizid.com</p>
     <p class="font-['Roboto_Condensed'] text-xl px-32 pt-2">Map:</p>
-    <div class="flex flex-col space-y-2 sm:flex-row sm:justify-center sm:space-y-1">
+    
+    <!-- Added margin-bottom for spacing -->
+    <div class="flex flex-col space-y-2 sm:flex-row sm:justify-center sm:space-y-1 mb-16">
         <div class="row px-32 pt-5">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.2134984863222!2d107.57351127631264!3d-6.874318847290697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7d1b68bb875%3A0xd8fcf5a9e43bd6e4!2sJl.%20Sariasih%20No.54%2C%20Sarijadi%2C%20Kec.%20Sukasari%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040151!5e0!3m2!1sid!2sid!4v1703008403145!5m2!1sid!2sid"
@@ -53,5 +55,19 @@
         </div>
     </div>
     
+    <footer class="bg-gray-800 text-white py-5">
+        <div class="footer-content text-center">
+            <p>© 2024 GoBizID, PT GoBiz By Abn</p>
+            <div style="margin-top: 5px;">
+                <p>Ikuti Kami:</p>
+                <div style="display: flex; justify-content: center; gap: 20px;">
+                    <a href="https://www.instagram.com/abnxrmally" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 30px; height: 30px;">
+                    </a>
+                </div>
+            </div> 
+        </div>
+    </footer>
+
 </body>
 </html>
