--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     <section class="partners">
         <h2>Mitra-mitra yang Telah Percaya GoBiz</h2>
         <div class="partner-logos">
-            <img src=https://3dmdb.com/previews/13037200.jpg alt="Partner 1">
-            <img src=https://www.rajaloker.id/storage/company_logo/111620201415505fb2272678fcd.png alt="Partner 2">
+            <img src=https://3dmdb.com/previews/13037200.jpg alt="Partner 1" class="rounded-[50%]">
+            <img src=https://www.rajaloker.id/storage/company_logo/111620201415505fb2272678fcd.png alt="Partner 2" class="rounded-[50%] ">
         </div>
     </section>
 
@@ -112,7 +112,7 @@
     </div>
    </section>      
 
-    <footer>
+    <footer class="bg-gray-800 text-white">
         <div class="footer-content">
             <p>© 2024 GoBizID, PT GoBiz By Abn</p>
             <div style="margin-top: 5px;">
