--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
         </div>
     </section>
     
-    <footer>
+    <footer class="bg-gray-800 text-white">
         <div class="footer-content">
             <p>© 2024 GoBizID, PT GoBiz By Abn</p>
             <div style="margin-top: 5px;">
