--- a/user/login.html
+++ b/user/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Double Slider Login / Register</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="container" id="container"></div>
@@ -31,7 +32,7 @@
                     <div class="content">
                         <div class="checkbox">
                             <input type="checkbox" name="checkbox" id="checkbox">
-                            <label for="Remember me"></label>
+                            <label>Remember me</label>
                         </div>
                         <div class="pass-link">
                             <a href="#">Forgot password?</a>
