--- a/user/index.html
+++ b/user/index.html
@@ -19,17 +19,17 @@
     <header class="sticky top-0 bg-white">
         <nav class="px-12 grid grid-cols-4 py-4 items-center">
             <div class="flex gap-5 items-center">
-                <img src="http://127.0.0.1:5501/assets/img/gobiz.png" alt="Profile Picture" class="rounded-[50%] w-8 h-8">
+                <img src="img/gobiz.png" alt="Profile Picture" class="rounded-[50%] w-8 h-8">
                 <p>GoBiz</p>
             </div>
             <ul class="flex justify-center gap-12 col-span-2">
-                <li><a href="##">Layanan</a></li>
-                <li><a href="#">Tentang</a></li>
+                <li><a href="../contact.html">Layanan</a></li>
+                <li><a href="../about.html">Tentang</a></li>
                 <li><a href="#">BizTips</a></li>
                 <li><a href="#">Komunitas</a></li>
             </ul>
             <div class="flex justify-end">
-                <a href="" class="bg-red-500 py-2 px-4 rounded-3xl font-semibold text-white">
+                <a href="../index.html" class="bg-red-500 py-2 px-4 rounded-3xl font-semibold text-white">
                     <p>Logout</p>
                 </a>
             </div>
@@ -60,7 +60,7 @@
                         <p class="text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, minima!</p>
                         <div class="flex justify-between items-center">
                             <p class="text-gray-300 text-xs">Lokasi - Depan Ulbi</p>
-                            <a href="../menu.html" class="border-2 border-blue-300 px-6 py-1 rounded-xl text-blue-300">
+                            <a href="menu.html" class="border-2 border-blue-300 px-6 py-1 rounded-xl text-blue-300">
                                 <p>Pesan</p>
                             </a>
                         </div>
