menambahkan mitra pada index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="user/login.html" class="btn btn-login">
                     <p>Login</p>
                 </a>
-                
+
             </div>
             
         </nav>
@@ -87,6 +87,7 @@
         <div class="partner-logos">
             <img src=https://3dmdb.com/previews/13037200.jpg alt="Partner 1" class="rounded-[50%]">
             <img src=https://www.rajaloker.id/storage/company_logo/111620201415505fb2272678fcd.png alt="Partner 2" class="rounded-[50%] ">
+            <img src=https://mir-s3-cdn-cf.behance.net/projects/404/0c23cb161998201.Y3JvcCw4MDgsNjMyLDcyLDA.png alt="Partner 2" class="rounded-[50%] ">
         </div>
     </section>
 
