--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <ul class="flex col-span-2 justify-center gap-32 items-center">
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="about.html">About</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="contact.html">Contact</a></li>
-                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">BizTips</a></li>
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="tips.html">BizTips</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
             </ul>
             <div class="flex justify-end gap-6">
