--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <!-- Favicon -->
-<a href="index.html">
-<link rel="icon" href="img/food-package.png" type="image/x-icon"></a>
-
+  <!-- Favicon -->
+  <link rel="icon" href="img/food-package.png" type="image/x-icon">
+  
 <body class="bg-gray-300">
     <header class="bg-white sticky top-0">
         <nav class="grid grid-cols-4 flex items-center px-10 py-2">
